[gd_scene load_steps=6 format=3 uid="uid://dr4xmdjfe5y7b"]

[ext_resource type="Script" path="res://Resources/button.gd" id="1_67pxb"]
[ext_resource type="Texture2D" uid="uid://coj4et55xwk2j" path="res://Art/przycisk.png" id="1_xwxdl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_htvhe"]
texture = ExtResource("1_xwxdl")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 9, 16, 16, -16, 16, -16, 9)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 9, 16, 9, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_u3cb5"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_htvhe")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccyrm"]
size = Vector2(32, 10)

[node name="Button" type="Node2D"]
script = ExtResource("1_67pxb")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_u3cb5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 27)
shape = SubResource("RectangleShape2D_ccyrm")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
